--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,13 @@
-django==3.1.7
-djangorestframework~=3.8
-parameterized==0.8.1
+asgiref==3.3.1
+dj-database-url==0.5.0
+Django==3.1.7
+djangorestframework==3.12.2
+gunicorn==20.0.4
 mock==2.0.0
+parameterized==0.8.1
+pbr==5.5.1
+python-decouple==3.4
+pytz==2021.1
+six==1.15.0
+sqlparse==0.4.1
+whitenoise==5.2.0
