--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ gunicorn==20.0.4
 idna==2.10
 mock==4.0.3
 parameterized==0.8.1
-psycopg2-binary==2.8.6
+psycopg2==2.7.4
 python-decouple==3.4
 pytz==2021.1
 requests==2.25.1
